modify latest column

--- a/css/sub.css
+++ b/css/sub.css
@@ -9,3 +9,8 @@
     background-color:rgba(255,255,255,0.8);
     background-blend-mode:lighten;
 }
+
+.newspicks_img{
+    width: 400px;
+    height: auto;
+}
